Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87236

NinePatchImage causes crash due to repeated presses.

XMLWordPrintable

    • All
    • 764b21987e36bc0734b7e8c9aab0e0d25771b56e (qt/qtquickcontrols2/dev) 386ff4f6aa9fd1ed4e05b405cf31f75be2703ec4 (qt/qtquickcontrols2/6.1) e3753afbc1f067e6915d2adcb829b11c0ae13cf7 (qt/qtquickcontrols2/6.0) 94b6245869 (qt/tqtc-qtquickcontrols2/5.15.8)

      This issue is related to QTBUG-78790

      QTBUG-78790 was not reproducible in Qt 5.15.0.

      However there is a case as below causing crash as well. When user uses two finger to repeatedly touch two items, the crash happens with the folllowing stack trace:

      Stack trace

      1 QQuickNinePatchNode::initialize(QSGTexture *, QSizeF const&, QSize const&, QQuickNinePatchData const&, QQuickNinePatchData const&, double) 0x7fffc49b65c6
      2 QQuickNinePatchImage::updatePaintNode(QSGNode *, QQuickItem::UpdatePaintNodeData *) 0x7fffc49b7421
      3 QQuickWindowPrivate::updateDirtyNode(QQuickItem *) 0x7fffc6c8e200
      4 QQuickWindowPrivate::updateDirtyNodes() 0x7fffc6c8e83d
      5 QQuickWindowPrivate::syncSceneGraph() 0x7fffc6c8fc40
      6 QSGRenderThread::sync(bool, bool) 0x7fffc6c370b5
      7 QSGRenderThread::syncAndRender(QImage *) 0x7fffc6c39461
      8 QSGRenderThread::run() 0x7fffc6c3cd8b
      9 QThreadPrivate::start(void *) 0x7ffff66e6415
      10 start_thread pthread_create.c 333 0x7ffff5abb6ba
      11 clone clone.S 109 0x7ffff5dd84dd

      You can refer the attached source code.
      (Since there is only one mouse device, I use Timer for a touch action)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            hoanguyen Hoa Nguyen
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: