Ninepatch: keep resetNode status to not lose track of ImageNode->NinePatchNode changes

Basically does what 788865b805bc91151ac8fe18bf7b92b1212ee07d did, but on
the other branch.

Pick-to: 6.1 6.0 5.15
Fixes: QTBUG-87236
Change-Id: Ie8371de8a9d49054c888e4bffb7e89392a6d7c07
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>